spacing, styling and layout issues fixed

--- a/public/styles/greentext-generator-styles.css
+++ b/public/styles/greentext-generator-styles.css
@@ -37,7 +37,7 @@ button,
     padding: 0 20px;
     font-size: 1em;
     text-align: center;
-    color: #194b3f;
+    color: var(--toggle-slider);
     border: 0.5rem outset rgba(217, 161, 192, .7);
     border-radius: 10px;
     background-color: rgba(217, 161, 192, .7);
@@ -63,15 +63,19 @@ button:active {
     flex-direction: column;
     gap: 1em;
     background-color: var(--main-background);
+    padding-top: 1em;
     padding-left: 14px;
     padding-right: 14px;
     padding-bottom: 1em;
     margin-left: 15px;
     margin-right: 15px;
+    margin-top: 15px;
 }
 
 .preview-box {
     outline: 3px dashed var(--new-style-anonymous-text);
+    margin-top: 1em;
+    margin-bottom: 1em;
 }
 
 /* Toggles */
@@ -95,15 +99,18 @@ button:active {
     justify-content: center;
     align-items: center;
     padding: 7px;
-    border-radius: 34px;
+    /* border-radius: 34px; */
+}
+
+.toggle p {
+    font-weight: 600;
 }
 
 .toggle:hover {
-    box-shadow: 0px 0px 0px 0px var(--divider);
-    outline: solid var(--divider);
-    outline-width: 0px;
+    box-shadow: 0px 0px 0px 0px var(--toggle-background);
+    outline: solid var(--toggle-background);
     animation-name: outline;
-    animation-duration: 0.3s;
+    animation-duration: 0.5s;
     animation-timing-function: linear;
     -webkit-animation-fill-mode: forwards;
     -moz-animation-fill-mode: forwards;
@@ -116,18 +123,21 @@ button:active {
 @keyframes outline {
     0% {
         outline-width: 0px;
-        box-shadow: 0px 0px 0px 0px var(--divider);
+        box-shadow: 0px 0px 0px 0px var(--toggle-background);
+        border-radius: 0px;
     }
 
     30%,
     70% {
         outline-width: thin;
-        box-shadow: 0px 0px 0px 0px var(--divider);
+        box-shadow: 0px 0px 0px 0px var(--toggle-background);
+        border-radius: 12px;
     }
 
     100% {
-        outline-width: medium;
-        box-shadow: 2px 3px 2px 1px var(--divider);
+        outline-width: 5px;
+        box-shadow: 5px 5px 5px 7px var(--toggle-background);
+        border-radius: 5px 20px 5px;
     }
 }
 
@@ -185,11 +195,6 @@ input:checked+.slider:before {
 .slider.round {
     outline-color: var(--toggle-slider);
     outline-style: solid;
-    border-radius: 34px;
-}
-
-.slider.round:before {
-    border-radius: 50%;
 }
 
 /* ----------------------------------------------------- */
@@ -233,7 +238,7 @@ input:checked+.slider:before {
     background-color: var(--new-style-anonymous-background);
 }
 
-#anonymous-date-box > div {
+#anonymous-date-box>div {
     display: flex;
     align-items: center;
 }
@@ -314,7 +319,7 @@ input:checked+.slider:before {
     flex-direction: row;
     gap: 50px;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     margin-top: 1em;
     margin-bottom: 1em;
     outline: 3px dashed var(--new-style-anonymous-text);
@@ -451,4 +456,40 @@ hr.rounded {
 
 #download-greentext {
     display: none;
+}
+
+/* Arrows */
+
+.button-down {
+    opacity: 80%;
+    position: relative;
+    padding: 5px;
+    margin: 1em auto;
+    background: var(--toggle-slider);
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    transition: all 0.2s linear;
+    box-shadow: 0px 0px 0px 5px var(--toggle-slider);
+}
+
+.button-down:hover {
+    transform: translate3d(0, 10px, 0);
+}
+
+.button-down::after {
+    content: "";
+    position: absolute;
+    left: 11.5px;
+    z-index: 11;
+    display: block;
+    width: 15px;
+    height: 15px;
+    border-top: 2px solid #fff;
+    border-left: 2px solid #fff;
+}
+
+.button-down::after {
+    top: 10px;
+    transform: rotate(225deg);
 }
