--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -51,6 +51,7 @@ h1 {
 h2 {
     padding: 10px;
     margin: 15px;
+    margin-bottom: 30px;
     color: #194b3f;
     font-size: 30px;
     background-color: rgba(221, 255, 244, 0.5);
